add current work

--- a/finance/job01_exec.ipynb
+++ b/finance/job01_exec.ipynb
@@ -42,20 +42,32 @@
       "-----  started  -----\n",
       "\n",
       "current_path = /home/swhors/jupyter-workspace/finance\n",
-      "\"0\", \"105560\", \"77900\", \"78400\", \"77300\", \"78100\", \"1639298\", \"0.0025673940949935137\", \"2024-09-11\"\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "type object 'datetime.datetime' has no attribute 'datetime'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m info \u001b[38;5;129;01min\u001b[39;00m infos:\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mstr\u001b[39m(info))\n\u001b[0;32m----> 7\u001b[0m     \u001b[43msend_metric\u001b[49m\u001b[43m(\u001b[49m\u001b[43minfo\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m----- completed -----\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/jupyter-workspace/finance/service/graphite_svc.py:15\u001b[0m, in \u001b[0;36msend_metric\u001b[0;34m(market_value)\u001b[0m\n\u001b[1;32m     13\u001b[0m HOST \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlocalhost\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;66;03m## server에 출력되는 ip를 입력해주세요 ##\u001b[39;00m\n\u001b[1;32m     14\u001b[0m PORT \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2003\u001b[39m\n\u001b[0;32m---> 15\u001b[0m dt \u001b[38;5;241m=\u001b[39m \u001b[43mdate_2_datetime\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmarket_value\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupdated\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     16\u001b[0m metric \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfinance.open.\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmarket_value\u001b[38;5;241m.\u001b[39mcode\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmarket_value\u001b[38;5;241m.\u001b[39mopen_v\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mint\u001b[39m(dt\u001b[38;5;241m.\u001b[39mtimestamp())\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmetric = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmetric\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/jupyter-workspace/finance/service/graphite_svc.py:9\u001b[0m, in \u001b[0;36mdate_2_datetime\u001b[0;34m(_date)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdate_2_datetime\u001b[39m(_date):\n\u001b[1;32m      8\u001b[0m     args \u001b[38;5;241m=\u001b[39m _date\u001b[38;5;241m.\u001b[39mtimetuple()[:\u001b[38;5;241m6\u001b[39m]\n\u001b[0;32m----> 9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mdatetime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdatetime\u001b[49m(\u001b[38;5;241m*\u001b[39margs)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: type object 'datetime.datetime' has no attribute 'datetime'"
+      "\"0\", \"105560\", \"79000\", \"81300\", \"79000\", \"81000\", \"686647\", \"0.03713188220230479\", \"2024-09-12\"\n",
+      "metric = finance._105560_.open 79000.0 1726070400\n",
+      "finance._105560_.high 81300.0 1726070400\n",
+      "finance._105560_.low 79000.0 1726070400\n",
+      "finance._105560_.close 81000.0 1726070400\n",
+      "finance._105560_.volume 686647.0 1726070400\n",
+      "finance._105560_.change 0.03713188220230479 1726070400\n",
+      "\n",
+      "\"0\", \"139050\", \"0\", \"0\", \"0\", \"2805\", \"0\", \"0.0\", \"2024-09-12\"\n",
+      "metric = finance._139050_.open 0.0 1726070400\n",
+      "finance._139050_.high 0.0 1726070400\n",
+      "finance._139050_.low 0.0 1726070400\n",
+      "finance._139050_.close 2805.0 1726070400\n",
+      "finance._139050_.volume 0.0 1726070400\n",
+      "finance._139050_.change 0.0 1726070400\n",
+      "\n",
+      "\"0\", \"006400\", \"365000\", \"371000\", \"360500\", \"361500\", \"166870\", \"-0.006868131868131844\", \"2024-09-12\"\n",
+      "metric = finance._006400_.open 365000.0 1726070400\n",
+      "finance._006400_.high 371000.0 1726070400\n",
+      "finance._006400_.low 360500.0 1726070400\n",
+      "finance._006400_.close 361500.0 1726070400\n",
+      "finance._006400_.volume 166870.0 1726070400\n",
+      "finance._006400_.change -0.006868131868131844 1726070400\n",
+      "\n",
+      "----- completed -----\n",
+      "\n"
      ]
     }
    ],
